# MSI

./: .gitignore  LICENSE.txt  README.md  __init__.py  gitignore  msi_run.py  pdoc_guide.md  setup.cfg
cti_core/: cti_combine.py
master_equation/: master_equation.py  master_equation_six_parameter_fit.py
master_equation_fitting_K/: Alpha_edits.ipynb  Rate Constant Difference.ipynb  Testing Mapping .ipynb  Untitled 1.ods  calculate_k_with_handwritten_fit.py  calculate_sensitivity_coef.py  cheb_sensitivity_coef.csv  cheb_test.cti  editing_array.ipynb  rc_test.csv  sol2cti_check.ipynb  temp_press.csv  testing_calculating_new_alphas.ipynb
msi_run/: msi_run.py
optimization/: jsr_optimization_shell.py  matrix_loader.py  opt_runner.py  optimization_shell.py  optimization_shell_chebyshev.py  optimization_shell_six_param_fit.py  shock_tube_optimization_shell_chebyshev.py
pdf_parse/: Pattern_match.ipynb  __init__.py  generate_pattern.py  graph_parser.py  graphify.py  make_graph.py  model.py  pdf_parser.py  set_train_data.py  train.py
simulations/: __init__.py  simulation.py  yaml_parser.py
templates/: README.md
tests/: automating_building_csv_and_yaml.py  automating_building_csv_and_yaml_hong_2011.py  automating_multiple_experiments.py  automating_multiple_experiments_lightfoot_1988.py  automating_multiple_experiments_michael.py  automating_multiple_experiments_michael_2.py  automating_multiple_experiments_sutherland.py  automating_multiple_experimetns_kircher_Ar_1983.py  automating_patrick_H2O2.py  automating_sangwan_h2o2.py  basic_ksens_test.py  basic_sim_test.py  (+69 more)
(+1175 files in other folders)
