[metadata]
# replace with your username:
name = multiscale-informatics
version = 0.0.1
author = Carly Lagrotta and Mark Barbet
author_email = cel2169@columbia.edu
description = Multi-Scale-Informatics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/carlylagrotta/MSI
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src